tests/paczka1/fuzzy1/12148185.err
Error in line 5: 4a0Peyc3E S18 6,5
Error in line 2: S33 S755 42,2
Error in line 7: M3r S33 52,1
